@@ -1,5 +1,7 @@
 pgcenter (devel) unstable; urgency=low
 
+  * divide init_stats() into init_stats() and init_iostats(), add free_iostats().
+  * add iostat subscreen prototype.
   * expand log_opened into subscreen entity, which allows add new subscreens
     with new functions (iostat, nicstat, etc).
   * add pg_stat_statements temp.
